# graphragX

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_codegraphrag.db
alembic/: env.py
alembic/versions/: 20260331_0001_baseline.py  20260331_0002_project_instructions_and_memories.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: analysis.py  chat.py  health.py  jobs.py  knowledge.py  projects.py  query.py  symbols.py  web.py
app/core/: config.py
app/db/: models.py  session.py
app/graph/: repository.py
app/ir/: models.py
app/ir/extractors/: base.py  csharp_extractor.py  java_extractor.py  python_extractor.py
app/schemas/: analysis.py  chat.py  common.py  job.py  knowledge.py  project.py  query.py  symbol.py
app/services/: audit_service.py  chat_service.py  chat_session_service.py  chunking_service.py  embedding_service.py  impact_service.py  indexing_service.py  job_service.py  knowledge_service.py  project_service.py  retrieval_service.py  runtime_check.py  scm_service.py  sync_service.py
app/vector/: repository.py  types.py
app/web/static/: chat-home.css  chat-home.js  common.js  impact.js  manage-knowledge.js  manage-projects.js  manage-sync.js  search.js  styles.css
codegraphrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_chat_api.py  test_chat_service.py  test_embedding.py  test_health.py  test_incremental_sync.py  test_indexing.py  test_knowledge.py  test_projects.py  test_python_edges.py  test_query.py  test_scm_service.py  test_web.py
(+6 files in other folders)
